--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
+    "react-paginate": "^8.1.3",
     "wagmi": "^0.6.0",
     "web3": "^1.8.0"
   },
